deploy: f300d7fd1e775d1ceba1cbd8a0dbc5c4a30d1c86

--- a/licenses.html
+++ b/licenses.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Chapter 1 - 人工知能ちゃん</title>
+        <title>Licenses - 人工知能ちゃん</title>
 
 
         <!-- Custom HTML head -->
@@ -83,7 +83,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="chapter_1.html" class="active"><strong aria-hidden="true">1.</strong> Chapter 1</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="about.html"><strong aria-hidden="true">1.</strong> About</a></li><li class="chapter-item expanded "><a href="licenses.html" class="active"><strong aria-hidden="true">2.</strong> Licenses</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -144,12 +144,47 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="chapter-1"><a class="header" href="#chapter-1">Chapter 1</a></h1>
+                        <h1 id="クレジット表記"><a class="header" href="#クレジット表記">クレジット表記</a></h1>
+<h2 id="bgm"><a class="header" href="#bgm">BGM</a></h2>
+<p>【著作権フリー】心落ち着くピアノ演奏音</p>
+<p>(そのほか、<code>/bgm</code>コマンドで変更できるBGMについては再生時にクレジット表記をコメントしています。)</p>
+<h2 id="声"><a class="header" href="#声">声</a></h2>
+<p>VOICEVOX</p>
+<ul>
+<li>
+<p>四国めたん</p>
+</li>
+<li>
+<p>ずんだもん</p>
+</li>
+<li>
+<p>小夜/SAYO</p>
+</li>
+<li>
+<p>春日部つむぎ</p>
+</li>
+<li>
+<p>冥鳴ひまり</p>
+</li>
+<li>
+<p>ナースロボ_タイプT</p>
+</li>
+<li>
+<p>猫使ビィ</p>
+</li>
+</ul>
+<h2 id="spoonのアイコン"><a class="header" href="#spoonのアイコン">Spoonのアイコン</a></h2>
+<p>怪しい美少女 (イラストACより)</p>
+<h2 id="配信の背景画像"><a class="header" href="#配信の背景画像">配信の背景画像</a></h2>
+<p>うたは様のフリーアイコン (Twitterより)</p>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
+                            <a rel="prev" href="about.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                                <i class="fa fa-angle-left"></i>
+                            </a>
 
 
                         <div style="clear: both"></div>
@@ -158,6 +193,9 @@
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
+                    <a rel="prev" href="about.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                        <i class="fa fa-angle-left"></i>
+                    </a>
 
             </nav>
 
