--- a/print.html
+++ b/print.html
@@ -84,7 +84,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="chapter_1.html"><strong aria-hidden="true">1.</strong> Chapter 1</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="about.html"><strong aria-hidden="true">1.</strong> About</a></li><li class="chapter-item expanded "><a href="licenses.html"><strong aria-hidden="true">2.</strong> Licenses</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -145,7 +145,128 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="chapter-1"><a class="header" href="#chapter-1">Chapter 1</a></h1>
+                        <h1 id="1-リンク"><a class="header" href="#1-リンク">1. リンク</a></h1>
+<ul>
+<li>
+<p><a href="https://www.spooncast.net/jp/profile/315396782/board/dj?t=all">Spoon</a></p>
+</li>
+<li>
+<p><a href="https://twitter.com/TinoZinko">Twitter</a></p>
+</li>
+</ul>
+<p>※ ご質問・ご要望などはDMで受け付けています。必ずしも返信できない場合がありますが、全て目を通しています。</p>
+<h1 id="2-ランキング機能"><a class="header" href="#2-ランキング機能">2. ランキング機能</a></h1>
+<p>現在、滞在時間のみからランキングを算出しています。</p>
+<p>訪問回数、コメント数、ハート数、スプーン数などはランキングに一切影響を与えません。</p>
+<p>また、ユーザー名を変更してもランキングの情報は保持されます。</p>
+<h1 id="3-コマンド"><a class="header" href="#3-コマンド">3. コマンド</a></h1>
+<p>コマンド一覧は<code>/help</code>で確認できますが、一部、隠しコマンドがあります。</p>
+<h2 id="21-声のエフェクトに関するコマンド"><a class="header" href="#21-声のエフェクトに関するコマンド">2.1 声のエフェクトに関するコマンド</a></h2>
+<ul>
+<li>
+<p><code>/echo</code>: エコーをかける</p>
+</li>
+<li>
+<p><code>/asmr</code>: こそこそ声にする</p>
+</li>
+<li>
+<p><code>/high</code>: 声を高くする</p>
+</li>
+<li>
+<p><code>/low</code>: 声を低くする</p>
+</li>
+<li>
+<p><code>/fast</code>: 早口にする</p>
+</li>
+<li>
+<p><code>/slow</code>: 遅口にする</p>
+</li>
+</ul>
+<h2 id="22-声の種類に関するコマンド"><a class="header" href="#22-声の種類に関するコマンド">2.2 声の種類に関するコマンド</a></h2>
+<ul>
+<li>
+<p><code>/zundamon</code></p>
+</li>
+<li>
+<p><code>/zundamon_2</code></p>
+</li>
+<li>
+<p><code>/zundamon_3</code></p>
+</li>
+<li>
+<p><code>/zundamon_4</code></p>
+</li>
+<li>
+<p><code>/zundamon_5</code></p>
+</li>
+<li>
+<p><code>/asmr</code></p>
+</li>
+<li>
+<p><code>/sayo</code></p>
+</li>
+<li>
+<p><code>/tsumugi</code></p>
+</li>
+<li>
+<p><code>/himari</code></p>
+</li>
+<li>
+<p><code>/nurse</code></p>
+</li>
+<li>
+<p><code>/nurse_asmr</code></p>
+</li>
+<li>
+<p><code>/bii</code></p>
+</li>
+<li>
+<p><code>/bii_calm</code></p>
+</li>
+<li>
+<p><code>/bii_shy</code></p>
+</li>
+</ul>
+<h2 id="23-それ以外のコマンド"><a class="header" href="#23-それ以外のコマンド">2.3 それ以外のコマンド</a></h2>
+<ul>
+<li><code>/bgm</code>: 枠のBGMを一時的に変更する</li>
+</ul>
+<h1 id="4-よくある質問"><a class="header" href="#4-よくある質問">4. よくある質問</a></h1>
+<p>Q. 回答が<code>ERROR</code>となる条件は何ですか</p>
+<p>A. AIの内部でエラーが発生したときに<code>ERROR</code>と表示されます。時間をおいて同じ質問をすると正しく回答が得られる場合があります。</p>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="クレジット表記"><a class="header" href="#クレジット表記">クレジット表記</a></h1>
+<h2 id="bgm"><a class="header" href="#bgm">BGM</a></h2>
+<p>【著作権フリー】心落ち着くピアノ演奏音</p>
+<p>(そのほか、<code>/bgm</code>コマンドで変更できるBGMについては再生時にクレジット表記をコメントしています。)</p>
+<h2 id="声"><a class="header" href="#声">声</a></h2>
+<p>VOICEVOX</p>
+<ul>
+<li>
+<p>四国めたん</p>
+</li>
+<li>
+<p>ずんだもん</p>
+</li>
+<li>
+<p>小夜/SAYO</p>
+</li>
+<li>
+<p>春日部つむぎ</p>
+</li>
+<li>
+<p>冥鳴ひまり</p>
+</li>
+<li>
+<p>ナースロボ_タイプT</p>
+</li>
+<li>
+<p>猫使ビィ</p>
+</li>
+</ul>
+<h2 id="spoonのアイコン"><a class="header" href="#spoonのアイコン">Spoonのアイコン</a></h2>
+<p>怪しい美少女 (イラストACより)</p>
+<h2 id="配信の背景画像"><a class="header" href="#配信の背景画像">配信の背景画像</a></h2>
+<p>うたは様のフリーアイコン (Twitterより)</p>
 
                     </main>
 
