deploy: f6f4a93bf2c1d6a9cc9703975b885fbf91b6ce34

--- a/print.html
+++ b/print.html
@@ -233,7 +233,7 @@
 </ul>
 <h1 id="4-よくある質問"><a class="header" href="#4-よくある質問">4. よくある質問</a></h1>
 <p>Q. 回答が<code>ERROR</code>となる条件は何ですか</p>
-<p>A. AIの内部でエラーが発生したときに<code>ERROR</code>と表示されます。時間をおいて同じ質問をすると正しく回答が得られる場合があります。</p>
+<p>A. AIの内部でエラーが発生したときに<code>ERROR</code>と表示されます。時間をおいて同じ質問をすると正しい回答が得られる場合があります。</p>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="クレジット表記"><a class="header" href="#クレジット表記">クレジット表記</a></h1>
 <h2 id="bgm"><a class="header" href="#bgm">BGM</a></h2>
 <p>【著作権フリー】心落ち着くピアノ演奏音</p>
