--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
 </ul>
 <h1 id="4-よくある質問"><a class="header" href="#4-よくある質問">4. よくある質問</a></h1>
 <p>Q. 回答が<code>ERROR</code>となる条件は何ですか</p>
-<p>A. AIの内部でエラーが発生したときに<code>ERROR</code>と表示されます。時間をおいて同じ質問をすると正しく回答が得られる場合があります。</p>
+<p>A. AIの内部でエラーが発生したときに<code>ERROR</code>と表示されます。時間をおいて同じ質問をすると正しい回答が得られる場合があります。</p>
 
                     </main>
 
