deploy: f3e09fc68285d31fee28f1fd3df0c805e4c4945b

--- a/print.html
+++ b/print.html
@@ -229,7 +229,12 @@
 </ul>
 <h2 id="33-それ以外のコマンド"><a class="header" href="#33-それ以外のコマンド">3.3 それ以外のコマンド</a></h2>
 <ul>
-<li><code>/bgm</code>: 枠のBGMを一時的に変更する</li>
+<li>
+<p><code>/bgm</code>: 枠のBGMを一時的に変更する</p>
+</li>
+<li>
+<p><code>/fortune</code>: 占いをする</p>
+</li>
 </ul>
 <h1 id="4-よくある質問"><a class="header" href="#4-よくある質問">4. よくある質問</a></h1>
 <p>Q. 回答が<code>ERROR</code>となる条件は何ですか</p>
