--- a/index.html
+++ b/index.html
@@ -144,7 +144,8 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="1-リンク"><a class="header" href="#1-リンク">1. リンク</a></h1>
+                        <p>最終更新日: 2023/05/07 22:55</p>
+<h1 id="1-リンク"><a class="header" href="#1-リンク">1. リンク</a></h1>
 <ul>
 <li>
 <p><a href="https://www.spooncast.net/jp/profile/315396782/board/dj?t=all">Spoon</a></p>
@@ -236,8 +237,14 @@
 </li>
 </ul>
 <h1 id="4-よくある質問"><a class="header" href="#4-よくある質問">4. よくある質問</a></h1>
+<p>Q. いつまで配信しますか</p>
+<p>A. 現時点では24時間365日配信しています。1日あたり500円程度(1ヶ月あたり2万円程度)の維持費が発生しているため、突然やめる可能性があります。</p>
 <p>Q. 回答が<code>ERROR</code>となる条件は何ですか</p>
 <p>A. AIの内部でエラーが発生したときに<code>ERROR</code>と表示されます。時間をおいて同じ質問をすると正しい回答が得られる場合があります。</p>
+<p>Q. 突然喋らなくなるときがありますが、なぜですか</p>
+<p>A. 読み上げプログラムの内部で一時的にエラーが発生しています。少し時間が経つと解消されます。</p>
+<p>Q. 強制退室となる条件は何ですか</p>
+<p>A. 基準は非公開ですが、現時点ではかなり緩い設定です。誤BANの疑いがある場合は、DMにて解除依頼を受け付けています。</p>
 
                     </main>
 
