deploy: c541888dd29f92fcbcb5c5fddb37349107385801

--- a/print.html
+++ b/print.html
@@ -160,7 +160,7 @@
 
                 <div id="content" class="content">
                     <main>
-                        <p>最終更新日: 2023/05/07 22:55</p>
+                        <p>最終更新日: 2023/05/09 14:01</p>
 <h1 id="1-リンク"><a class="header" href="#1-リンク">1. リンク</a></h1>
 <ul>
 <li>
@@ -176,7 +176,9 @@
 <p>訪問回数、コメント数、ハート数、スプーン数などはランキングに一切影響を与えません。</p>
 <p>また、ユーザー名を変更してもランキングの情報は保持されます。</p>
 <h1 id="3-コマンド"><a class="header" href="#3-コマンド">3. コマンド</a></h1>
-<p>コマンド一覧は<code>/help</code>で確認できますが、一部、隠しコマンドがあります。</p>
+<p>コマンドには、<code>/echo こんにちは</code>や<code>/asmr こんにちは</code>のようにテキストと併用するコマンドと、<code>/bgm</code>や<code>/fortune</code>のように単体で使用するコマンドの二種類があります。</p>
+<p>コマンド一覧は<code>/help</code>で確認できますが、以下に示すように隠しコマンドがあります。</p>
+<p><code>/echo /asmr こんにちは</code>のように、複数のコマンドをスペースで区切って指定することも可能です。</p>
 <h2 id="31-声のエフェクトに関するコマンド"><a class="header" href="#31-声のエフェクトに関するコマンド">3.1 声のエフェクトに関するコマンド</a></h2>
 <ul>
 <li>
