--- a/book/print.html
+++ b/book/print.html
@@ -161,6 +161,9 @@
                 <div id="content" class="content">
                     <main>
                         <p>最終更新日: 2024/06/14 (<a href="./release_notes.html">変更履歴</a>)</p>
+<h1 id="0-稼働ステータス"><a class="header" href="#0-稼働ステータス">0. 稼働ステータス</a></h1>
+<div id='tino_zinko_status'>ステータス: 読み込み中...</div>
+<p>※ 稼働ステータスはリアルタイムに更新されており、ページ上部の「最終更新日」とは必ずしも一致しません</p>
 <h1 id="1-リンク"><a class="header" href="#1-リンク">1. リンク</a></h1>
 <ul>
 <li>
@@ -545,6 +548,22 @@
 
         </div>
 
+        <!-- Livereload script (if served using the cli tool) -->
+        <script>
+            const wsProtocol = location.protocol === 'https:' ? 'wss:' : 'ws:';
+            const wsAddress = wsProtocol + "//" + location.host + "/" + "__livereload";
+            const socket = new WebSocket(wsAddress);
+            socket.onmessage = function (event) {
+                if (event.data === "reload") {
+                    socket.close();
+                    location.reload();
+                }
+            };
+
+            window.onbeforeunload = function () {
+                socket.close();
+            }
+        </script>
 
 
 
